# hyprcrosshair

./: PKGBUILD  README.md  meson.build
data/: hyprcrosshair.desktop
src/: hyprcrosshair.c
